Moved styles for tag container div to CSS file; Introduced styles for title images; Prevented anchor elements from inserting a line break on whitespace.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -20,6 +20,17 @@
     font-weight: bold;
 }
 
+.title-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+}
+
+.tag-container {
+    margin-top: 5%;
+    margin-bottom: 10%;
+}
 
 .tags {
     list-style: none;
@@ -37,6 +48,7 @@
     padding: 0 10px 0 12px;
     background: #166c90;
     text-decoration: none;
+    white-space: nowrap;
     -moz-border-radius-bottomright:4px;
     -webkit-border-bottom-right-radius:4px;
     border-bottom-right-radius:4px;
